data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_980.wast
;; 1. **Test: Incorrect Function Return Type Handling**    - **Description**: Verify the behavior when a function is required to return a certain type, but the stack does not have the expected value type. Specifically, test a scenario where a `br` instruction branches to a label expecting an integer return type when the stack contains a float value.    - **Constraint Checked**: Ensures that the stack's value types match the return type of the branched-to label.    - **Improper Handling Aspect**: Incorrect return value on the stack for a function call, leading to an unexpected type at function return.

(assert_invalid
  (module
    (func $type-mismatch-br
      (block (result i32)
        (f32.const 1.0)
        (br 0)
      )
    )
  )
  "type mismatch"
)